--- a/home/home.html
+++ b/home/home.html
@@ -68,7 +68,7 @@
                     <li>
                         <a href="#contact" class="menuhov"> 
                         <h5 class="sup">
-                        Sign Up
+                        Login
                         </h5></a>
                     </li>
                 </ul>
