--- a/home/otp.html
+++ b/home/otp.html
@@ -64,7 +64,7 @@
                     <li>
                         <a href="#contact" class="menuhov"> 
                         <h5 class="sup">
-                        Sign Up
+                        Login
                         </h5></a>
                     </li>
                 </ul>
