--- a/home/signup.html
+++ b/home/signup.html
@@ -65,7 +65,7 @@
                     <li>
                         <a href="#contact" class="menuhov"> 
                         <h5 class="sup">
-                        Sign Up
+                        Login
                         </h5></a>
                     </li>
                 </ul>
